[package]
name = "ckb-lib-secp256k1"
version = "0.1.0"
authors = ["jjy <jjyruby@gmail.com>"]
edition = "2018"
license = "MIT"
description = "CKB secp256k1 dynamic linking library"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7.2"

[build-dependencies]
blake2b-rs = "0.1.5"
